Added wording under Agendas heading

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -31,7 +31,8 @@ fileDownload: true
       <!-- Agendas Proceedings and Proclamations -->
         <div class="panel panel-primary" id="agendas">
           <div class="panel-heading" >
-            <h4 class="panel-title text-center">Agendas, Proceedings and Proclamations</h4>
+						<h4 class="panel-title text-center">Agendas, Proceedings and Proclamations</h4>
+							<h6 class="panel-title text-center">(All documents are posted for the <i>'week of'</i> the date listed)</h6>
           </div>
           <div class="list-group">
             <div id="comAgendas"></div>
