--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -124,7 +124,7 @@ permalink: /solid_waste/billing
                     <th id="servicelevel" width="155">Roll Cart</th>
                     <th id="monthlyfee" width="155">Quarterly Fee</th>
                     <th id="annualfee" width="155">Annual Fee</th>
-                    <th id="febfee" width="155">Paid by March <sup>st</sup></th>
+                    <th id="febfee" width="155">Paid by March 1<sup>st</sup></th>
                   </tr>
                   <tr>
                     <td headers="servicelevel">35 gallon can (owner provides)</td>
