--- a/_pages/dept/solid_waste/exemptioninfo.html
+++ b/_pages/dept/solid_waste/exemptioninfo.html
@@ -22,7 +22,7 @@ permalink: /solid_waste/exemptioninfo
     <div class="panel-body">
       <p>The Solid Waste Department shall not have the authority to grant or deny applications for exemption based on hardship (Section 22(F)(1)) or refunds (Section 22(F)(8)). The authority to grant or deny hardship exemptions or refunds will rest solely with the Board of County Commissioners.</p>
 
-      <p>As a general policy no refunds are granted. Any exceptions to this policy will be at the sole discretion of the Latah County Board of Commissioners. An applicant who wishes to challenge a decision of the Solid Waste Department regarding an exemption may file a written request with the Board of County Commissioners within thirty (30) days of the Solid Waste DepartmentŽs decision. Upon review, the Board of County Commissioners can affirm or set aside the decision of the Solid Waste Department.</p>
+      <p>As a general policy no refunds are granted. Any exceptions to this policy will be at the sole discretion of the Latah County Board of Commissioners. For “An applicant who wishes to challenge a decision of the Solid Waste Department regarding an exemption may file a written request with the Board of County Commissioners within thirty (30) days of the Solid Waste Department’s decision. Upon review, the Board of County Commissioners can affirm or set aside the decision of the Solid Waste Department.</p>
 
       <p>All adjustment and/or exemption applications may be subject to the approval of the Latah County Board of Commissioners. Additional documentation may be required.</p>
 
