--- a/_pages/dept/solid_waste/holidaycollection.html
+++ b/_pages/dept/solid_waste/holidaycollection.html
@@ -6,6 +6,6 @@ permalink: /solid_waste/holidaycollection
     Latah Sanitation will observe New Year's Day, Memorial Day, Independence Day, Labor Day, Thanksgiving Day and Christmas Day.
     For these holidays only, if your service day falls on or after the holiday, you will be serviced one day late through Saturday. Please have your roll cart out at 7am as holiday collection hours are typically earlier.
     When a holiday occurs on a Saturday or Sunday the service day will not change, however the Solid Waste Processing Facility and Bulky Waste Sites will be closed.
-    Schedules are subject to change and will be advertised on the radio, websites and local papers.
+    Schedules are subject to change and will be advertised on the Latah Sanitation website and local papers.
   </div>
 </div>
