--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -69,7 +69,7 @@ news: true
 				<div class="panel-body">
 					<b>Clean-up Months</b><br><br>
 					<b>April and October</b> are deemed clean-up months at the Bulky Waste Sites.<br>
-					Household garbage including plastic and rubber items are accepted during these tow months only.<br><br>
+					Household garbage including plastic and rubber items are accepted during these two months only.<br><br>
 					No E-Waste or Hazardous Waste
 				</div>
 			</div>
@@ -85,8 +85,8 @@ news: true
 			</div>
 			<ul class="list-group">
 				<li class="list-group-item text-center">Manage Solid Waste Fees</li>
-				<li class="list-group-item text-center">Negotiates Contracts</li>
-				<li class="list-group-item text-center">Manages Billing and Collection</li>
+				<li class="list-group-item text-center">Negotiate Contracts</li>
+				<li class="list-group-item text-center">Manage Billing and Collection</li>
 			</ul>
 		</div>
 
