--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -11,7 +11,7 @@ fileDownload: true
 		<div class="col-md-12">
 			<div class="panel panel-primary">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
-					{% cloudinary /img/officials/LoisReed.png class="figure-img img-responsive rounded" width="250" alt="Latah County Treasurer" %}
+					{% cloudinary /img/officials/BJSwanson.png class="figure-img img-responsive rounded" width="250" alt="Latah County Treasurer" %}
 					<figcaption class="figure-caption text-center">Treasurer Lois Reed</figcaption>
 				</figure>
 				<p class="panel-body">
