Changed treasurer name.

--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -12,7 +12,7 @@ fileDownload: true
 			<div class="panel panel-primary">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
 					{% cloudinary /img/officials/BJSwanson.png class="figure-img img-responsive rounded" width="250" alt="Latah County Treasurer" %}
-					<figcaption class="figure-caption text-center">Treasurer Lois Reed</figcaption>
+					<figcaption class="figure-caption text-center">Treasurer BJ Swanson</figcaption>
 				</figure>
 				<p class="panel-body">
 					The County Treasurer is elected every four years. In addition to the primary duty of handling county funds, the Treasurer is also ex-officio tax collector and ex-officio public administrator. The Board of County Commissioners sets the salary. The Treasurer is authorized to appoint as many deputies as deemed necessary to discharge the duties of the office within budgetary limits approved by the commissioners.
