--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -17,7 +17,7 @@ fileDownload: true
         </figcaption>
       </figure>
       <p class="panel-body">
-        This elected three-member board is the governing body of Latah County, from left to right: Tom Lamar (Chair, District II), Richard Walser (District I), and Dave McGraw (District III). The Board has the ability, by ordinance, to meet Monday through Friday, 9:00 to 5:00 p.m. Usually however, the Board meets Mondays and Wednesdays, between 9:00 a.m. and 5:00 p.m. The Board Members also attend off-site and evening meetings throughout the week as scheduled.
+        This elected three-member board is the governing body of Latah County, from left to right: Kathie LaFortune (District I), Dave McGraw (District III), Tom Lamar (Chair, District II). The Board has the ability, by ordinance, to meet Monday through Friday, 9:00 to 5:00 p.m. Usually however, the Board meets Mondays and Wednesdays, between 9:00 a.m. and 5:00 p.m. The Board Members also attend off-site and evening meetings throughout the week as scheduled.
         <br><br>
         All meetings of the Board are open to the public with the exception of Executive Sessions. Books, records and accounts of the meetings are open for public inspection in the Clerk's office.
         <br><br>
