--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -69,6 +69,7 @@ fileDownload: true
 			</div>
 			<div class="list-group">
       <a href="#" data-remote="false" class="list-group-item list-link text-center" onclick="downloadFileEx('VoterApprovedLevyBondTracker.pdf'); return false;">Levy and Bond Tracker Information</a>
+      <a href="#" data-remote="false" class="list-group-item list-link text-center" onclick="downloadFileEx('TaxDeedAuction.pdf'); return false;">Tax Deed Auction</a>
       <a href="https://www.idaho.gov/taxes-money/unclaimed-property-lottery/" date-remote="false" class="list-group-item list-link text-center">Excess Tax Deed Funds Inquiry</a>
       <a href="somethingnewfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">New Bill Items FAQ</a>
       <a href="payments.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Payments</a>
