--- a/_pages/dept/sheriff/detention.html
+++ b/_pages/dept/sheriff/detention.html
@@ -58,6 +58,7 @@ fileDownload: true
 				<a href="../jailPostingBond.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Posting Bond</a>				
 				<a href="../jailVisitingInfo.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Visiting Information</a>
 				<a href="../jailPREA.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Prison Rape Elimination Act (PREA)</a>
+				<a href="#" class="list-group-item list-link text-center" onclick="downloadFileEx('Latah 2018 Final IPREA Audit Report.pdf'); return false;">2018 IPREA Audit Report</a>
 				<a href="/sheriff/" data-remote="false" class="list-group-item list-link text-center">Sheriff Home</a>
 			</div>
 		</div>
