Adding updated text for Extensions

--- a/_pages/dept/extension/home.html
+++ b/_pages/dept/extension/home.html
@@ -7,20 +7,23 @@ permalink: /extension/
   <!-- Left Col -->
   <div class="col-md-8">
       <div class="well">
-        <h4>Nationally</h4>
-        <p>
-          The Extension System is a public-funded, non-formal, educational system that links education and research resources and activities of the USDA, 74 land-grant universities and 3,150 counties. Extension's purpose is education for Americans to use in dealing with the critical issues that have an impact on their lives and the nation's future.
-        </p>
-        <h4>Locally</h4>
-        <p>
-          Youth Programs include coordination of the 4-H youth development program that focuses on building life long learning skills that develop youth potential. The Latah County 4-H program serves 350 members and 100 leaders. There are over 400 projects available from Aerospace to Wood Science.
-        </p>
-        <p>
-          Agricultural and horticultural extension provides educational programs on production, management, marketing and sustainability to area farmers, ranchers, nursery, orchard and wood lot owners. One program is the ClearWater Direct Seeders, a group of multi-county, multi-state growers who exchange ideas, discuss the latest technology and strive to promote environmentally sound direct seed cropping systems through meetings, workshops and tours.
-        </p>
-        <p>
-          The Master Gardener program provides specialized horticulture training to community members. These trained volunteers help answer questions through community service in the form of plant clinics offered at the office on Tuesdays and Thursdays from 9:00 a.m. to 12:00 p.m. and Moscow Farmers Market every Saturday, May through September. They also assist in horticulture projects such as the Demonstration Garden on First Street in Moscow and teaching beginning gardeners and youth about gardening.
-        </p>
+        <p><strong>Nationally</strong></p>
+      <p>All universities engage in research and teaching, but the nation's more than 100 land-grant colleges and universities have a third, critical mission &mdash; Extension.&nbsp; Extension is a public-funded, non-formal system to provide education, research resources, and learning activities to people throughout the country &mdash; to farmers and other residents of rural communities as well as to people living in urban areas. Extension&rsquo;s purpose is to take the knowledge gained through research and education and bring it directly to the people to create positive changes and to have an impact on their lives and the nation&rsquo;s future.&nbsp; Through Extension, land-grant colleges and universities bring vital, practical information to agricultural producers, small business owners, consumers, families, and young people.</p>
+      <p><strong>Locally</strong></p>
+      <ul>
+      <li><strong>Family Finances &ndash; </strong>We offer free workshops, classes, and financial counseling/money coaching, focusing on healthy money management, debt and credit recovery, identity theft protection, end-of-life planning and other financial topics. This program strives to help community members build strong financial lives.</li>
+      <li><strong>Eat Smart Idaho &ndash;</strong> We provide free education and information for living a healthy lifestyle to low-income Idahoans. Participants learn the basics around healthy eating, importance of physical activity, food safety, smart shopping, meal preparation, and how to manage resources for low-cost, nutritious meals for the family.</li>
+      <li><strong>Small Acreage Farming and Ranching &ndash; </strong>We offer classes and workshop topics in whole farm planning, farm business planning, marketing, soil health, farm law, crop production, livestock and pasture management, and farm tours.</li>
+      <li><strong>Gardening and Horticulture &ndash; </strong>Get resources to help you understand horticulture and gardening, attend a gardening class, bring samples into our clinic, or register to become an Idaho Master Gardener to share your gardening knowledge with the community.</li>
+      <li><strong>4-H Youth Development &ndash; </strong>Youth engage in life skill development, emphasizing experiential learning in leadership, plants and animals, science and technology. Youth enjoy 4H Camp at Camp Wooten, several day camps and other programs.</li>
+      </ul>
+      <p>&nbsp;</p>
+      <p>200 S. Almon Street, Suite 201 | Moscow, ID&nbsp; 83843
+      <p>208-833-2267 | <a href="mailto:latah@uidaho.edu">latah@uidaho.edu</a></p>
+      <p><a href="http://www.uidaho.edu/extension/county/latah">www.uidaho.edu/extension/county/latah</a></p>
+      <p>Find us on Facebook</p>
+      <p><a href="http://www.facebook.com/LatahCounty4H">www.facebook.com/LatahCounty4H</a></p>
+      <p>&nbsp;</p>
       </div>
   </div>
   <!-- Right Col -->
