Updated Weeds links and page.

--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -31,7 +31,7 @@ permalink: /weed_control/
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
           <ul class="list-group">
-            <a href="http://www.agri.state.id.us/Categories/PlantsInsects/NoxiousWeeds/indexnoxweedmain.php" target="_blank" class="list-group-item">Noxious Weed Program</a>
+            <a href="https://invasivespecies.idaho.gov/invasivespecies-overview/" target="_blank" class="list-group-item">Noxious Weed Program</a>
           </ul>
         </div>
       </div>
@@ -45,10 +45,11 @@ permalink: /weed_control/
         </div>
         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
           <ul class="list-group">
-            <a href="http://uspest.org/pnw/weeds" target="_blank" class="list-group-item">PNW Weed Management Handbook</a>
+            <a href="https://uspest.org/pnw/weeds" target="_blank" class="list-group-item">PNW Weed Management Handbook</a>
             <a href="http://www.cdms.net/LabelsMsds/LMDefault.aspx" target="_blank" class="list-group-item">CDMS, LABELS & MSDS</a>
-            <a href="http://www.dowagro.com/range/products/" target="_blank" class="list-group-item">DOW Agrosciences</a>
-            <a href="http://www.cals.uidaho.edu/edComm/catalog.asp" target="_blank" class="list-group-item">University of Idaho Publications</a>
+            <a href="https://home.agrian.com/" target="_blank" class="list-group-item">Agrain Label Lookup</a>
+            <a href="https://www.corteva.us/" target="_blank" class="list-group-item">Corteva Agrisciences</a>
+            <a href="https://www.cals.uidaho.edu/edComm/catalog.asp" target="_blank" class="list-group-item">University of Idaho Publications</a>
           </ul>
         </div>
       </div>
@@ -62,8 +63,7 @@ permalink: /weed_control/
         </div>
         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
           <ul class="list-group">
-            <a href="http://www.idahoweedawareness.com/" target="_blank" class="list-group-item">Idaho Weed Awareness Campaign</a>
-            <a href="http://plants.usda.gov/index.html" target="_blank" class="list-group-item">USDA NRCS National Plants Database</a>
+            <a href="https://plants.usda.gov/index.html" target="_blank" class="list-group-item">USDA NRCS National Plants Database</a>
           </ul>
         </div>
       </div>
@@ -78,6 +78,7 @@ permalink: /weed_control/
         <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
           <ul class="list-group">            
             <a href="http://mtwow.org/Bio-Control-main.htm" target="_blank" class="list-group-item">Bio Control Agents</a>
+            <a href="http://www.nezpercebiocontrol.com/" target="_blank" class="list-group-item">Nez Perce Bio Control Center</a>
           </ul>
         </div>
       </div>
@@ -93,8 +94,7 @@ permalink: /weed_control/
           <ul class="list-group">
             <a href="http://idahoweedcontrol.org/" target="_blank" class="list-group-item">Idaho Weed Control Association</a>
             <a href="http://www.iawcs.org/" target="_blank" class="list-group-item">Idaho Association of Weed Control Superintendents</a>
-            <a href="http://www.idahoweedawareness.com/" target="_blank" class="list-group-item">Idaho Weed Awareness Campaign</a>
-            <a href="http://www.cals.uidaho.edu/pses/" target="_blank" class="list-group-item">University of Idaho Plant, Soil, and Entomological Sciences</a>
+            <a href="https://www.cals.uidaho.edu/pses/" target="_blank" class="list-group-item">University of Idaho Plant, Soil, and Entomological Sciences</a>
           </ul>
         </div>
       </div>
@@ -109,8 +109,8 @@ permalink: /weed_control/
         <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
           <ul class="list-group">
             <a href="http://www.weedcenter.org/" target="_blank" class="list-group-item">Center for Invasive Plant Management</a>
-            <a href="http://extension.wsu.edu/wsprs/Pages/default.aspx" target="_blank" class="list-group-item">WA State Pest Mangement Resourses</a>
-            <a href="http://www.pnw-ipc.org/" target="_blank" class="list-group-item">PNW Invasive Plant Council</a>
+            <a href="https://extension.wsu.edu/wsprs/Pages/default.aspx" target="_blank" class="list-group-item">WA State Pest Mangement Resourses</a>
+            <a href="https://www.pnw-ipc.org/" target="_blank" class="list-group-item">PNW Invasive Plant Council</a>
           </ul>
         </div>
       </div>
@@ -138,7 +138,7 @@ permalink: /weed_control/
   <div class="col-md-4">
     <h4>Idaho Noxious Weed Book</h4>
     <div class="well">
-      <a href="http://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>
+      <a href="https://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>
         {% cloudinary book_thumb /img/noxWeedsBook.png alt="Idaho Noxious Weeds Book" %}
       </a>
       <p>
@@ -149,7 +149,7 @@ permalink: /weed_control/
           <button class="btn btn-default" href="#bookRequest" data-toggle="modal">Request Copy</button>
         </div>
         <div class="col-md-6 text-right">
-          <a class="btn btn-default" href="http://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>Download PDF</a>
+          <a class="btn btn-default" href="https://www.cals.uidaho.edu/edComm/pdf/BUL/BUL816.pdf" download>Download PDF</a>
         </div>
       </div>
     </div>
