Added caption to picture.

--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -60,7 +60,10 @@ fileDownload: true
       </div>
     </div>
     <div class="well">
-      {% cloudinary /img/assessor/2019DMVStaff.jpg class="img-responsive rounded" alt="Employees of the DMV" %}
+      <figure>
+        {% cloudinary /img/assessor/2019DMVStaff.jpg class="img-responsive rounded" alt="Employees of the DMV" %}
+        <figcaption class="figure-caption text-center">Department of Motor Vehicles</figcaption>
+      </figure>
     </div>
   </div>
   <!--class="col-md-8" -->
