Updated job applications.

--- a/_pages/employment/home.html
+++ b/_pages/employment/home.html
@@ -64,8 +64,8 @@ permalink: /employment/
           <h4 class="panel-title">Applications for Employment</h3>
       </div>
       <div class="panel-body">        
-        <a href="#" class="list-group-item list-link " onclick="downloadJobApp('Application.pdf'); return false;">Form With Fields (complete, then print)</a>
-        <a href="#" class="list-group-item list-link " onclick="downloadJobApp('Application_NoFields.pdf'); return false;">Other Departments - Blank Form</a>
+        <a href="#" class="list-group-item list-link " onclick="downloadJobApp('Application.pdf'); return false;">Employment Application (Fillable)</a>
+        <a href="#" class="list-group-item list-link " onclick="downloadJobApp('AuthorizationforBackgroundCheck.pdf'); return false;">Authorization for Background Check (Fillable)</a>
         <a href="#" class="list-group-item list-link " onclick="downloadJobApp('Tracker_Application_Form.pdf'); return false;">Probation Officer Assistant Application - Blank Form</a>
         <a href="#" class="list-group-item list-link " onclick="downloadJobApp('Application_Sheriff.pdf'); return false;">Sheriff Department - Blank Form</a>       
       </div>
