--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -61,8 +61,9 @@ fileDownload: true
 				<a href="https://listmail.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
 				<a href="#agendas" class="list-group-item list-link">Agendas</a>
 				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
-				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('Commissioner Districts Moscow 11by17.pdf'); return false;">City of Moscow Commissioner District Map</a>				
-      	<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
+				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('Commissioner Districts Moscow 11by17.pdf'); return false;">City of Moscow Commissioner District Map</a>
+				<a href="#" class="list-group-item list-link" onclick="downloadFileEx('Current_BOCC_Agenda.pdf'); return false;">Current BOCC Agenda</a>
+				<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
 				<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>				      	
 			</div>
   	</div>
