Updated contact info.

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -223,7 +223,7 @@ fileDownload: true
                   <strong>Chairman:</strong><br />
 									Ron Jones<br />
 									<strong>Email:</strong><br />
-									rangerron233@icloud.com<br />
+									rangerron1944@gmail.com<br />
 									<h4>Latah County Parks &amp; Rec</h4>
                   <strong>Director:</strong><br />
 									Andrew Grant<br />
