updated BOCG email

--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -96,7 +96,7 @@ fileDownload: true
                   <strong>Chairman:</strong><br />
                   Liz Bryant<br />
                   <strong>Email:</strong><br />
-                  <a href="mailto:latahbocg@gmail.com">latahbocg@gmail.com</a><br /> <!-- Todo | Needs to be obfuscated-->
+                  <a href="mailto:BOCG@latah.id.us">BOCG@latah.id.us</a><br /> <!-- Todo | Needs to be obfuscated-->
                   <strong>Address:</strong><br />
                   P.O. Box 8637<br />
                   Moscow, ID 83843<br />
