--- a/_pages/dept/assessor/home.html
+++ b/_pages/dept/assessor/home.html
@@ -61,6 +61,12 @@ fileDownload: true
     </div>
     <div class="well">
       <figure>
+        {% cloudinary /img/assessor/2019AssessorStaff.jpg class="img-responsive rounded" alt="Employees of the Latah County Assessor’s Office" %}
+        <figcaption class="figure-caption text-center">Latah County Assessor’s Office</figcaption>
+      </figure>
+    </div>
+    <div class="well">
+      <figure>
         {% cloudinary /img/assessor/2019DMVStaff.jpg class="img-responsive rounded" alt="Employees of the DMV" %}
         <figcaption class="figure-caption text-center">Department of Motor Vehicles</figcaption>
       </figure>
