--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -9,7 +9,7 @@ fileDownload: true
 <div class="row">
   <div class="col-md-8 ">
     <div class="well">
-      <div class="row">
+      <div class="row" style="padding-bottom: 1em;">
         <a href="http://gis.latah.id.us/ParcelViewer/ParcelViewer.html" target="_blank">
           <figure class="col-md-4">
             <figcaption class="text-center img-center-text" style="font-size: 1.5em">Parcel Viewer</figcaption>
@@ -34,7 +34,7 @@ fileDownload: true
       <div class="row">
           <a href="https://gis.latah.id.us/latahview" target="_blank">
             <figure class="col-md-4">
-              <figcaption class="text-center img-center-text" style="font-size: 1.5em">Historic Places</figcaption>
+              <figcaption class="text-center img-center-text" style="font-size: 1.5em">Historic Places<br>&amp;<br>Points of Interest</figcaption>
               <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Historic Places"> -->
               {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Historic Places" %}
             </figure>
