Added News & Notices. Collapsed Duties.

--- a/_pages/dept/treasurer/home.html
+++ b/_pages/dept/treasurer/home.html
@@ -3,6 +3,7 @@ layout: page
 title: Treasurer
 permalink: /treasurer/
 tree: true
+news: true
 fileDownload: true
 ---
 <div class="row">
@@ -15,36 +16,99 @@ fileDownload: true
 					<figcaption class="figure-caption text-center">Treasurer BJ Swanson</figcaption>
 				</figure>
 				<p class="panel-body">
-					The County Treasurer is elected every four years. In addition to the primary duty of handling county funds, the Treasurer is also ex-officio tax collector and ex-officio public administrator. The Board of County Commissioners sets the salary. The Treasurer is authorized to appoint as many deputies as deemed necessary to discharge the duties of the office within budgetary limits approved by the commissioners.
-          <br>
-          <br>
-          <b>Duties as County Treasurer</b>
-          <br>A primary responsibility of the Treasurer's office is making sure the money collected and received is invested safely. The interest earned is included as income in the county budget and has the effect of reducing property taxes.
-          <br>
-          <br>
-          The Treasurer's office is responsible for cross-checking all funds collected through the county, which includes driver's license fees, court fines, auto license fees, recording fees and any fee collected by any county department. All funds pass through the Treasurer's office. This is referred to in Idaho State Code as the Auditor's Certificate procedure. This double check requires a daily balancing procedure and bank deposit. In addition, the Treasurer's office is responsible for
-          daily verification and acceptance of all county warrants paid by the county auditor. Each warrant is verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
-          <br>
-          <br>
-          The County Treasurer is responsible for receiving all monies belonging to the county, accounting for their receipt and the safekeeping of these funds. The Treasurer is also responsible for the timely disbursement of funds from the county treasury to comply with budgetary requests from each taxing district. The Treasurer is accountable for keeping records of the receipts and expenditures from all funds. Each month the Treasurer prepares a financial statement and with the auditor presents it to the county commissioners for their review.
-          <br>
-          <br>
-          <b>Duties as County Tax Collector</b>
-          <br>A primary responsibility of the County Treasurer's office is the collection of all real and personal property taxes within the county. It is the responsibility of the Treasurer's office to annually prepare and mail property tax notices. The Treasurer's office is also responsible for collecting special (certified) assessments for water districts, fire protection, rural solid waste charges, local improvement districts and yield or deferred timber taxes. verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
-          <br>
-          <br>
-          The Treasurer's office is responsible for furnishing detailed and verified tax information to lending institutions, title companies, realtors, accountants, taxing districts and individual taxpayers.
-          <br>
-          <br>
-          <b>Duties as Public Administrator</b>
-          <br>The County Treasurer administers estates for any individual within the county who dies intestate (without heirs or assignees). This includes physically cleaning out their home and storing those items, recording and cataloging funds and personal effects. Working closely with the prosecuting attorney's office each estate is researched for heirs and funds, then monitored for all possible expenses and eventually closed after public advertisement. verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
-          <br>
-          <br>
-          The Treasurer is also responsible for safeguarding and maintaining funds designated by the courts and their judges. These monies are often as a result of unresolved estates, inheritance, seized funds, etc. The funds arrive with specific instructions from the judge as to investing, holding and disbursement.
+					The County Treasurer is elected every four years. In addition to the primary duty of handling county funds, the Treasurer is also ex-officio tax collector and ex-officio public administrator. The Board of County Commissioners sets the salary. The Treasurer is authorized to appoint as many deputies as deemed necessary to discharge the duties of the office within budgetary limits approved by the commissioners.          
 				</p>
 			</div>
+      <!-- End Description -->
+      <!-- News and Notices -->
+      <div class="row" id="newsNotices">
+        <div class="container col-md-6" id="notices">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title text-center">Notices</h3>
+            </div>
+            <div class="list-group">
+              <div id="trsNotice"></div>
+            </div>
+          </div>
+        </div>
+        <div class="container col-md-6" id="news">
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title text-center">News</h3>
+            </div>
+            <div class="list-group">
+              <div id="trsNews"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End News and Notices -->
+      <!-- Duties -->
+      <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#trsDuties">
+                Duties as County Treasurer
+              </a>
+            </h4>
+          </div>
+          <div id="trsDuties" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>
+                A primary responsibility of the Treasurer's office is making sure the money collected and received is invested safely. The interest earned is included as income in the county budget and has the effect of reducing property taxes.
+              </p>
+              <p>
+                The Treasurer's office is responsible for cross-checking all funds collected through the county, which includes driver's license fees, court fines, auto license fees, recording fees and any fee collected by any county department. All funds pass through the Treasurer's office. This is referred to in Idaho State Code as the Auditor's Certificate procedure. This double check requires a daily balancing procedure and bank deposit. In addition, the Treasurer's office is responsible for daily verification and acceptance of all county warrants paid by the county auditor. Each warrant is verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
+              </p>
+              <p>
+                The County Treasurer is responsible for receiving all monies belonging to the county, accounting for their receipt and the safekeeping of these funds. The Treasurer is also responsible for the timely disbursement of funds from the county treasury to comply with budgetary requests from each taxing district. The Treasurer is accountable for keeping records of the receipts and expenditures from all funds. Each month the Treasurer prepares a financial statement and with the auditor presents it to the county commissioners for their review.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#taxDuties">
+                Duties as County Tax Collector
+              </a>
+            </h4>
+          </div>
+          <div id="taxDuties" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>
+                A primary responsibility of the County Treasurer's office is the collection of all real and personal property taxes within the county. It is the responsibility of the Treasurer's office to annually prepare and mail property tax notices. The Treasurer's office is also responsible for collecting special (certified) assessments for water districts, fire protection, rural solid waste charges, local improvement districts and yield or deferred timber taxes. verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
+              </p>
+              <p>
+                The Treasurer's office is responsible for furnishing detailed and verified tax information to lending institutions, title companies, realtors, accountants, taxing districts and individual taxpayers.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#pubDuties">
+                Duties as Public Administrator
+              </a>
+            </h4>
+          </div>
+          <div id="pubDuties" class="panel-collapse collapse">
+            <div class="panel-body">
+              <p>
+                The County Treasurer administers estates for any individual within the county who dies intestate (without heirs or assignees). This includes physically cleaning out their home and storing those items, recording and cataloging funds and personal effects. Working closely with the prosecuting attorney's office each estate is researched for heirs and funds, then monitored for all possible expenses and eventually closed after public advertisement. verified for validity and funds availability. Upon signature, the bank is authorized to disperse funds on all warrants issued.
+              </p>
+              <p>
+                The Treasurer is also responsible for safeguarding and maintaining funds designated by the courts and their judges. These monies are often as a result of unresolved estates, inheritance, seized funds, etc. The funds arrive with specific instructions from the judge as to investing, holding and disbursement.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Duties -->
 		</div>
-		<!-- End Description -->
 	</div><!-- <div class="col-md-8"> -->
 
 	<div class="col-md-4">
@@ -105,5 +169,9 @@ fileDownload: true
 	deptTree("treasurerDir", "Treasurer")
 </script>
 
-
-
+<script type="text/javascript">
+  //args contains the list of control elements that needs to be examined
+  const args = ['trsNews', 'trsNotice'];
+  //pass in the args array and the department
+  getNewsandNotices(args, "Trs")
+</script>
