--- a/_pages/dept/planning_building/GIS/home.html
+++ b/_pages/dept/planning_building/GIS/home.html
@@ -17,7 +17,7 @@ fileDownload: true
             {% cloudinary /img/gis1.jpg class="figure-img img-responsive rounded center-block" width="200" alt="Parcel Viewer" %}
           </figure>
         </a>
-        <a href="http://gis.latah.id.us/publicmap/index.html" target="_blank">
+        <a href="https://gis.latah.id.us/publicmap/index.html" target="_blank">
           <figure class="col-md-4">
             <figcaption class="text-center img-center-text" style="font-size: 1.5em">Public Map</figcaption>
             <!-- <img class="figure-img img-responsive rounded center-block" src="/img/gis1.jpg" alt="Public Map"> -->
